# codex-shell

./: .gitignore  AGENTS.md  Cargo.toml  UI編集実装案.txt  _tmp_inject.cs  _tmp_vk.cs  chatGPT用_ギットハブアドレス.txt  イラスト.clip  プロジェクトのファイル作成コマンド.txt  プロジェクト宣言_codex-shell.md  通常指示_codex-shell.txt
.cargo/: config.toml
assets/fonts/: FONT_SOURCE.txt
runtime/: commit_details.md  commit_message.md
runtime/ui/: ui.json
runtime/ui/init/: ui.json
runtime/ui/live/: ui.json
src/: main.rs  ui_command.rs  ui_editor.rs
src/app/: conpty_listener.rs  mod.rs  pipe_ops.rs  process_ops.rs  process_runtime.rs  runtime_shell.rs
src/app/main_parts/: part01_prelude_and_constants.rs  part02_ui_definition.rs  part03_ui_objects_and_state.rs  part04_shell_init.rs  part05_shell_runtime.rs  part06_shell_commands.rs  part07_shell_widgets.rs  part08_shell_scene_and_app.rs  part09_system_io.rs  part10_wrappers_reasoning_main.rs
src/tools/: README.md  mod.rs
src/tools/ui_edit/: api.rs  command.rs  editor.rs  mod.rs  ui_edit_プロンプト.txt
src/tools/ui_edit/editor_parts/: part01_viewport_and_panel.rs  part02_alignment.rs
