[package]
name = "codex-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
auto-launch = "0.6.0"
clap = { version = "4.5.60", features = ["derive"] }
conpty = "0.7.0"
directories = "6.0.0"
eframe = "0.33.3"
global-hotkey = "0.7.0"
interprocess = "2.4.0"
notify = "8.2.0"
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
single-instance = "0.3.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tray-icon = "0.21.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Time", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
